# Copyright (c) Victor Derks.
# SPDX-License-Identifier: MIT

[package]
name = "netpbm-wic-codec-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
win_dbg_logger = "0.1.0"
log = "0.4.22"
windows-implement = "0.58.0"
windows-core = "0.58.0"

[dependencies.windows]
version = "0.58"
features = ["implement", "Foundation", "Win32_System_Com", "Win32_Graphics_Imaging",
    "Win32_System_Ole", "Win32_UI", "Win32_UI_Shell", "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_WinRT", "Win32_Storage", "Win32_Storage_EnhancedStorage"]

[dependencies.windows-registry]
version = "0.3"
